5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4184/executions/1644_2704.log
== TEST (2019-04-11 16:12:07) 
-- CODE:
x= float(input("nota do aluno: "))
y= input("bonificacao: ")

if (x % 10):
	mensagem = 
-- ERROR:
File "XXXX", line 5
    mensagem = 
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 16:13:52) 
-- CODE:
x= float(input("nota do aluno: "))
y= input("bonificacao: ")

if (x % 10):
	mensagem = "nota do aluno"
	
else:
	mensagem = "boificacao"
	
print("nota final")

	
-- OUTPUT:
nota final
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
